# pijama_legacy

./: .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  example.pj
.github/workflows/: bench.yml
benches/: eval.rs
dev/bench/: data.js
pijama/: Cargo.toml
pijama/src/: lib.rs  main.rs
pijama_ast/: Cargo.toml
pijama_ast/src/: analysis.rs  lib.rs  location.rs  node.rs  ty.rs  visitor.rs
pijama_codegen/: Cargo.toml
pijama_codegen/src/: compiler.rs  lib.rs
pijama_common/: Cargo.toml
pijama_common/src/: generator.rs  lib.rs  location.rs
pijama_core/: Cargo.toml
pijama_core/src/: lib.rs
pijama_ctx/: Cargo.toml
pijama_ctx/src/: generator.rs  lib.rs  store.rs
pijama_driver/: Cargo.toml
pijama_driver/benches/: adler32.pj  arithmetic.pj  calling.pj  cond_chain.pj  eval.rs  factorial.pj  fibonacci.pj  fibonacci_tail.pj  gcd.pj  short_circuit.pj
pijama_driver/src/: lib.rs
pijama_driver/tests/: mod.rs  util.rs
pijama_driver/tests/ast/fail/: mod.rs
pijama_driver/tests/ast/pass/: mod.rs
pijama_driver/tests/eval/: ackermann.pj  add_overflow_panics.pj  adler32.pj  and_short_circuit.pj  arithmetic.pj  bit_and.pj  bit_or.pj  bit_shift_l.pj  bit_shift_r.pj  bit_xor.pj  calling.pj  complex_calling.pj  cond_chain.pj  factorial.pj  factorial_tail.pj  fancy_max.pj  fibonacci.pj  fibonacci_tail.pj  gcd.pj  logic.pj  mod.rs  neg_overflow_panics.pj  number_bases_arithmetic.pj  number_bases_cmp.pj  or_short_circuit.pj  print_complex_fn.pj  print_redefine.pj  short_circuit.pj  step.pj
pijama_driver/tests/parse/fail/: mod.rs
pijama_driver/tests/parse/pass/: fn_def.pj  literal.pj  mod.rs  un_op.pj
pijama_driver/tests/type_check/: mod.rs
pijama_driver/tests/type_check/fail/: mod.rs
pijama_driver/tests/type_check/fail/arithmetic/: mod.rs
pijama_driver/tests/type_check/fail/bindings/: bind_bool_to_int.pj  mod.rs
pijama_driver/tests/type_check/fail/comparison/: mixed_type_bool_placeholder.pj  mod.rs
pijama_driver/tests/type_check/fail/conditionals/: mod.rs
pijama_driver/tests/type_check/fail/functions/: mod.rs  wrong_type_after_call.pj  wrong_type_fn_call_arg.pj  wrong_type_rec_fn.pj
pijama_driver/tests/type_check/fail/logic/: mod.rs  wrong_type_placeholder.pj
pijama_driver/tests/type_check/fail/sequences/: mod.rs
pijama_driver/tests/type_check/fail/variables/: mod.rs  shadowing.pj
pijama_driver/tests/type_check/pass/: mod.rs
pijama_driver/tests/type_check/pass/arithmetic/: mod.rs
pijama_driver/tests/type_check/pass/bindings/: mod.rs
pijama_driver/tests/type_check/pass/comparison/: mod.rs
pijama_driver/tests/type_check/pass/conditionals/: mod.rs
pijama_driver/tests/type_check/pass/functions/: anon_fn_from_int_to_int_with_type.pj  fn_from_int_to_int_with_type.pj  int_function_call_returns_int.pj  mod.rs
pijama_driver/tests/type_check/pass/literals/: mod.rs
pijama_driver/tests/type_check/pass/logic/: mod.rs
pijama_driver/tests/type_check/pass/sequences/: mod.rs  unit_can_be_ignored.pj
pijama_hir/: Cargo.toml
pijama_hir/src/: lib.rs  lower.rs
pijama_lir/: Cargo.toml
pijama_lir/src/: lib.rs  lower.rs
pijama_llama/: Cargo.toml
pijama_llama/src/: lib.rs
pijama_machine/: Cargo.toml
pijama_machine/src/: arithmetic.rs  builder.rs  eval.rs  lib.rs
pijama_mir/: Cargo.toml
pijama_parser/: Cargo.toml
pijama_ty/: Cargo.toml
pijama_tycheck/: Cargo.toml
pijama_vm/: Cargo.toml
src/: ast.rs  ctx.rs  eval.rs  ir.rs  lib.rs  lir.rs  lower.rs  machine.rs  main.rs  mir.rs  options.rs  parser.rs  source.pj  ty.rs  ty_check.rs
tests/: mod.rs  util.rs
(+202 files in other folders)
