[package]
name = "pijama"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt"]
