[package]
name = "pijama"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

[dependencies]
nom = "5.1.1"
nom_locate = "2.0.0"
thiserror = "1.0"
codespan-reporting = "0.9.4"
lazy_static = "1.4.0"
pijama_ast = { path = "src/pijama_ast", version = "0.1.0" }
structopt = "0.3.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "eval"
harness = false
