[package]
name = "pijama_codegen"
version = "0.1.0"
authors = ["The Pijama Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pijama_mir = { path = "../pijama_mir" }
pijama_ast = { path = "../pijama_ast" }
