[package]
name = "pijama_codegen"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>"]
edition = "2018"

[dependencies]
pijama_ctx = { path = "../pijama_ctx" }
pijama_mir = { path = "../pijama_mir" }
pijama_ty = { path = "../pijama_ty" }
pijama_common = { path = "../pijama_common" }
