[package]
name = "pijama_driver"
version = "0.1.0"
authors = ["The Pijama Project Developers"]
edition = "2018"

[dependencies]
thiserror = "1.0"
pijama_ast = { path = "../pijama_ast", version = "0.1.0" }
pijama_core = { path = "../pijama_core", version = "0.1.0" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "eval"
harness = false
