[package]
name = "pijama_driver"
version = "0.1.0"
authors = ["The Pijama Project Developers"]
edition = "2018"

[dependencies]
thiserror = "1.0"
pijama_ast = { path = "../pijama_ast" }
pijama_parser = { path = "../pijama_parser" }
pijama_ty = { path = "../pijama_ty" }
pijama_mir = { path = "../pijama_mir" }
pijama_tycheck = { path = "../pijama_tycheck" }
pijama_lir = { path = "../pijama_lir" }
pijama_machine = { path = "../pijama_machine" }
pijama_codegen = { path = "../pijama_codegen" }
pijama_vm = { path = "../pijama_vm" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "eval"
harness = false
